material stock update and cs place wo added

--- a/KGERP/Views/Report/SeedProductStockReport.cshtml
+++ b/KGERP/Views/Report/SeedProductStockReport.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Data.CustomModel.ReportCustomModel
 <div class="row">
     <div class="col-md-12" style="background-color:lightblue">
-        @Html.Label("Get Seed Product Stock Report", new { @style = "font-size:20px" })
+        @Html.Label("Get Material Stock Report", new { @style = "font-size:20px" })
     </div>
 </div>
 <br />
