--- a/KGERP/Views/Quotation/ComparativeStatement.cshtml
+++ b/KGERP/Views/Quotation/ComparativeStatement.cshtml
@@ -84,7 +84,13 @@
                                                 <h4 class="text-white">Vendor Name: @(group.FirstOrDefault()?.SupplierName ?? "N/A")</h4>
                                             </td>
                                             <td colspan="2" width="50%">
-                                                <button class="btn btn-primary place-work-order" style="width: 100%; border-radius: 0; border: none;">Place Work Order</button>
+                                                @using (Html.BeginForm("CSProcurementPurchaseOrderSlave", "Procurement", FormMethod.Post))
+                                                {
+                                                    @Html.Hidden("QuotationMasterId", group.FirstOrDefault()?.QuotationMasterId ?? 0);
+                                                    @Html.Hidden("QuotationSubmitMasterId", group.FirstOrDefault()?.QuotationSubmitMasterId ?? 0);
+                                                    <button class="btn btn-primary place-work-order" style="width: 100%; border-radius: 0; border: none;">Place Work Order</button>
+                                                    
+                                                }
                                             </td>
                                         </tr>
                                         <tr class="bg-gray">
