Singed Cancel button unblocked

--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -284,9 +284,21 @@
                                                         }
                                                         else
                                                         {
-                                                            <center class="btn btn-xs btn-danger text-center d-block disabled" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" title="Disabled">
-                                                                Cancel
-                                                            </center>
+                                                            if (item.IsCancelRequest)
+                                                            {
+                                                                <center class="btn btn-xs btn-danger text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" onclick="ChequeCancel('@item.ChequeRegisterId')">
+                                                                    Cancel
+                                                                </center>
+                                                                <center class="btn btn-xs btn-danger text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShowCancel_@item.ChequeRegisterId">
+                                                                    Canceled
+                                                                </center>
+                                                            }
+                                                            else
+                                                            {
+                                                                <center class="btn btn-xs btn-danger text-center d-block disabled" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" title="Disabled">
+                                                                    Cancel
+                                                                </center>
+                                                            }
                                                         }
                                                     </td>
                                                 </tr>
