--- a/KGERP/Views/Quotation/ComparativeStatement.cshtml
+++ b/KGERP/Views/Quotation/ComparativeStatement.cshtml
@@ -86,7 +86,7 @@
                                             <td colspan="2" width="50%">
                                                 @using (Html.BeginForm("CSProcurementPurchaseOrderSlave", "Procurement", FormMethod.Post))
                                                 {
-                                                    @Html.Hidden("QuotationMasterId", group.FirstOrDefault()?.QuotationMasterId ?? 0);
+                                                    @Html.Hidden("ActionEum", (int)KGERP.Utility.ActionEnum.Add);
                                                     @Html.Hidden("QuotationSubmitMasterId", group.FirstOrDefault()?.QuotationSubmitMasterId ?? 0);
                                                     <button class="btn btn-primary place-work-order" style="width: 100%; border-radius: 0; border: none;">Place Work Order</button>
                                                     
